--- a/style.css
+++ b/style.css
@@ -1,25 +1,44 @@
-/*
-    
-CIS166AA: Introduction to JavaScript
-Project 4
-
-Author: Sammy Bernstein
-Date:   April 18, 2024
-
-*/
-
-/* Horizontal Navigation Styles */
-
-nav.horizontalNavigation > ul {
-   display: inline;
-   list-style: none;
-   margin: 0;
-   padding: 0;
+h1 {
+  font-family: helvetica, arial, sans-serif;
+  text-align: center;
 }
 
+body {
+  width: 640px;
+  margin: 0 auto;
+}
 
-/* Typography Styles */
+.full-img {
+  position: relative;
+  display: block;
+  width: 640px;
+  height: 480px;
+}
 
-.descriptor {
-    line-height: 1.5em;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 640px;
+  height: 480px;
+  background-color: rgba(0,0,0,0);
+}
+
+button {
+  border: 0;
+  background: rgba(150,150,150,0.6);
+  border: 1px solid #999;
+  font-family: helvetica, arial, sans-serif;
+  padding: 5px;
+  position: absolute;
+  cursor: pointer;
+  top: -15px;
+  left: 3px;
+}
+
+.thumb-bar img {
+  display: block;
+  width: 20%;
+  float: left;
+  cursor: pointer;
 }
